--- a/index.html
+++ b/index.html
@@ -1,30 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
-    <title>Winery</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
+  <title>Winery</title>
 </head>
-<body>
-    <header class="header">
-        <div class="header-div">
-          <a class="zetta" href="#">Zetta Hotels</a>
-          <nav>
-            <ul class="navigation">
-              <li><a href="Home"></a></li>
-              <li><a href="ROOMS"></a></li>
-              <li><a href="ROOMS"></a></li>
-              
-            </ul>
-            <div class="chevron">
-              <i class="fas fa-chevron-circle-down"></i>
-            </div>
-          </nav>
+
+<body class="body">
+
+  <header class="header">
+    <div class="header-div">
+      <nav>
+        <ul class="navigation">
+          <a href="#">
+            <li class="nav-list">Wines</li>
+          </a>
+          <a href="#">
+            <li class="nav-list">Our Mission</li>
+          </a>
+          <a href="#">
+            <li class="nav-list"><img class="logo" src="img/pngegg.png" alt="logo"></li>
+          </a>
+          <a href="#">
+            <li class="nav-list">Wine Blog</li>
+          </a>
+          <a href="#">
+            <li class="nav-list">Contact Us</li>
+          </a>
+        </ul>
+        <div class="bars">
+          <i class="fas fa-bars"></i>
         </div>
+      </nav>
+    </div>
+
+    
+    <section>
+      <div class="container">
+        <div class="h1">
+          <h1>Quality Wine from Organically Grown Grapes</h1>
+        </div>
+        <div class="left-content">
+          <h3 class="explora">EXPERIENCE</h3>
+          <h2 class="birthstone">The Story Behind</h2>
+          <h2 class="birthstone">Our Winery</h2>
+          <img class="vineyard" src="img/vineyard.jpg" alt="vineyard">
+        </div>
+
+        <div class="right">
+          <img src="" alt="">
+          <p>Guided walking Tour through the Vineyards in the Valley of Gods and the Menegolli Wineries. Book your tour
+            in advance (minimum 7 adults) which will take place in Valpantena – VERONA.</p>
+        </div>
+      </div>
+
+    </section>
+    <section>
+      <div class="background1">
+        <img src="img/Group 193.png" alt="">
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="block">
+          <i class="far fa-bell"></i>
+          <p class="div-text1">LATEST Articles</p>
+          <p class="div-text2">Best Wine Makers in Georgia 2021</p>
+          <p class="div-text3">Solutions for Smart Home & Businesses</p>
+          <div class="read">
+            <p>Read More</p>
+          </div>
+        </div>
+        <div class="block">
+          <img class="image" src="img/health-benefits.jpg" alt="2" />
+          <p class="div-text1">Health Benefits of White Wine</p>
+          <p class="div-text2">June 10, 2021</p>
+          <p class="div-text3">Winemaking or vinification is the production of wine, starting with the selection of the
+            fruit, its fermentation into alcohol, and the bottling of the finished</p>
+          <div class="read">
+            <p>Read More</p>
+          </div>
+        </div>
+        <div class="block">
+          <img class="image" src="img/awards.jpg" alt="3" />
+          <p class="div-text1">Annual Wine Awards 2021</p>
+          <p class="div-text2">June 10, 2021</p>
+          <p class="div-text3">Winemaking or vinification is the production of wine, starting with the selection of the
+            fruit, its fermentation into alcohol, and the bottling of the finished</p>
+          <div class="read">
+            <p>Read More</p>
+          </div>
+        </div>
+    </section>
 </body>
+
+<footer>
+  <div class="footer">
+    <div class="footer-main">
+      <div class="footer1">
+        <p class="footer-title">Zetta Hotels</p>
+        <p class="footer-text">Our hotel is an image of quality and profesionalism combined with hard work and
+          precision. You can expect only the best services from our staff.</p>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
+      <div class="footer2">
+        <p class="footer-text">Useful links</p>
+        <a class="blue" href="#">Blog</a>
+        <a class="blue" href="#">Room</a>
+        <a class="blue" href="#">Gift Card</a>
+        <a class="blue" href="#">Testimonials</a>
+      </div>
+      <div class="footer3">
+        <p class="footer-text">Privacy</p>
+        <a class="blue" href="#">Career</a>
+        <a class="blue" href="#">About us</a>
+        <a class="blue" href="#">Contact us</a>
+        <a class="blue" href="#">Services</a>
+      </div>
+      <div class="footer4">
+        <p class="footer-text">Contact Info</p>
+        <img src="img/mail.svg" alt="">
+        <p class="footer-text">example@yahoo.com</p>
+        <img src="img/phone.svg" alt="">
+        <p class="footer-text">+0 320 422 4254</p>
+        <img src="img/pin.svg" alt="">
+        <p class="footer-text">Main Str Chicago Ilinois</p>
+      </div>
+    </div>
+</footer>
+
 </html>
