--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/fonts.css">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
   <script src="./js/animate.js"></script>
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <title>Winery</title>
 </head>
 
@@ -45,10 +47,16 @@
       </nav>
     </div>
 
+<section id="section0">
+  <div class="container0">
+    <div class="h1">
+      <h1 class="h1text animate__animated animate__fadeInDown">Quality Wine from Organically Grown Grapes</h1>
+    </div>
+  </div>
+</section>
     <section id="section1">
       <div class="container1">
         <div class="h1">
-          <h1 class="h1text">Quality Wine from Organically Grown Grapes</h1>
         </div>
         <div class="left-content">
           <div class="vineyard-text">
@@ -56,17 +64,7 @@
             <h2 class="birthstone">The Story Behind</h2>
             <h2 class="birthstone">Our Winery</h2>
 
-            <div class="your-class">
-              <div>your content1</div>
-              <div>your content2</div>
-              <div>your content3</div>
-            </div>
 
-          </div>
-          <div class="vineyard-img">
-            <img class="vineyard" src="img/vineyard.jpg" alt="vineyard">
-          </div>
-        </div>
 
         <div class="right">
           <img src="" alt="">
