--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
   <script src="./js/animate.js"></script>
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Winery</title>
 </head>
 
@@ -47,13 +47,13 @@
       </nav>
     </div>
 
-<section id="section0">
-  <div class="container0">
-    <div class="h1">
-      <h1 class="h1text animate__animated animate__fadeInDown">Quality Wine from Organically Grown Grapes</h1>
-    </div>
-  </div>
-</section>
+    <section id="section0">
+      <div class="container0">
+        <div class="h1">
+          <h1 class="h1text animate__animated animate__fadeInDown">Quality Wine from Organically Grown Grapes</h1>
+        </div>
+      </div>
+    </section>
     <section id="section1">
       <div class="container1">
         <div class="h1">
@@ -63,16 +63,16 @@
             <h3 class="explora">Experience</h3>
             <h2 class="birthstone">The Story Behind</h2>
             <h2 class="birthstone">Our Winery</h2>
+            <div class="slider">
+
+            </div>
 
 
-
-        <div class="right">
-          <img src="" alt="">
-          <p class="page1-p">Guided walking Tour through the Vineyards in the Valley of Gods and the Menegolli Wineries.
-            Book your tour
-            in advance (minimum 7 adults) which will take place in Valpantena – VERONA.</p>
-        </div>
-      </div>
+            <div class="right">
+              <img src="" alt="">
+              <p class="page1-p">Guided walking Tour through the Vineyards in the Valley of Gods and the Menegolli Wineries. Book your tour in advance (minimum 7 adults) which will take place in Valpantena – VERONA.</p>
+            </div>
+          </div>
 
     </section>
     <section id="section2">
