--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/fonts.css">
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script> -->
   <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
   <script src="./js/animate.js"></script>
+  <script src="./js/carousel.js"></script>
   <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Winery</title>
@@ -25,17 +26,17 @@
     <div class="header-div">
       <nav class="nav">
         <ul class="ul">
+          <a onclick="scrol(0)">
+            <li class="nav-list">Vineyard</li>
+          </a>
           <a onclick="scrol(3)">
             <li class="nav-list">Wines</li>
           </a>
-          <a onclick="scrol(1)">
-            <li class="nav-list">Our Mission</li>
-          </a>
-          <a onclick="scrol(0)">
-            <li class="nav-list"><img class="logo" src="img/pngegg.png" alt="logo"></li>
+          <a onclick="scrol(#)">
+            <li class="nav-list"><img class="logo" src="img/lionbg.png" alt="logo"></li>
           </a>
           <a onclick="scrol(2)">
-            <li class="nav-list">Wine Blog</li>
+            <li class="nav-list">Our Mission</li>
           </a>
           <a onclick="scrol(4)">
             <li class="nav-list">Contact Us</li>
@@ -48,6 +49,7 @@
     </div>
 
     <section id="section0">
+      <div class="section0-blur"></div>
       <div class="container0">
         <div class="h1">
           <h1 class="h1text animate__animated animate__fadeInDown">Quality Wine from Organically Grown Grapes</h1>
@@ -63,10 +65,17 @@
             <h3 class="explora">Experience</h3>
             <h2 class="birthstone">The Story Behind</h2>
             <h2 class="birthstone">Our Winery</h2>
-            <div class="slider">
-
+            <div class="carousel">
+              <button class="carousel__button previous" id="previous"><</button>
+              <div class="carousel__images">
+                <img src="https://via.placeholder.com/300" alt="qvevri">
+                <img src="https://via.placeholder.com/300" alt="venaxi">
+                <img src="https://via.placeholder.com/300" alt="wine">
+                <img src="https://via.placeholder.com/300" alt="wine">
+                <img src="https://via.placeholder.com/300" alt="wine">
+              </div>
+              <button class="carousel__button next" id="next"><</button>
             </div>
-
 
             <div class="right">
               <img src="" alt="">
@@ -100,9 +109,7 @@
             <img class="image" src="img/health-benefits.jpg" alt="2" />
             <p class="div-text1">Health Benefits of White Wine</p>
             <p class="div-text2">June 10, 2021</p>
-            <p class="div-text3">Winemaking or vinification is the production of wine, starting with the selection of
-              the
-              fruit, its fermentation into alcohol, and the bottling of the finished</p>
+            <p class="div-text3">Winemaking or vinification is the production of wine, starting with the selection of the fruit, its fermentation into alcohol, and the bottling of the finished</p>
             <div class="read">
               <p>Read More</p>
             </div>
@@ -125,7 +132,7 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47475.97241850706!2d45.837696!3d41.952002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4045db6446bf4a71%3A0x4e98ff012a347404!2sShilda%20Winery%20and%20Restaurant!5e0!3m2!1ska!2sge!4v1634021242415!5m2!1ska!2sge"
-            width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="form">
           <form action="#">
