--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
     <div class="header-div">
       <nav class="nav">
         <ul class="ul">
-          <a onclick="scrol(0)">
-            <li class="nav-list">Vineyard</li>
+          <a onclick="scrol(1)">
+            <li class="nav-list">Winery</li>
           </a>
           <a onclick="scrol(3)">
             <li class="nav-list">Wines</li>
           </a>
-          <a onclick="scrol(#)">
+          <a onclick="scrol(0)">
             <li class="nav-list"><img class="logo" src="img/lionbg.png" alt="logo"></li>
           </a>
           <a onclick="scrol(2)">
-            <li class="nav-list">Our Mission</li>
+            <li class="nav-list">About Us</li>
           </a>
           <a onclick="scrol(4)">
-            <li class="nav-list">Contact Us</li>
+            <li class="nav-list">Contact</li>
           </a>
         </ul>
         <div class="bars">
