--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script type="text/javascript" src="slick/slick.min.js"></script> -->
   <script src="https://kit.fontawesome.com/1a849f7e50.js" crossorigin="anonymous"></script>
   <script src="./js/animate.js"></script>
-  <script src="./js/carousel.js"></script>
   <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <title>Winery</title>
@@ -22,7 +21,6 @@
 
 <body class="body">
 
-  <header class="header">
     <div class="header-div">
       <nav class="nav">
         <ul class="ul">
@@ -56,40 +54,133 @@
         </div>
       </div>
     </section>
-    <section id="section1">
+    <!-- <section id="section1">
       <div class="container1">
-        <div class="h1">
-        </div>
-        <div class="left-content">
-          <div class="vineyard-text">
-            <h3 class="explora">Experience</h3>
-            <h2 class="birthstone">The Story Behind</h2>
-            <h2 class="birthstone">Our Winery</h2>
-            <div class="carousel">
-              <button class="carousel__button previous" id="previous"><</button>
-              <div class="carousel__images">
-                <img src="https://via.placeholder.com/300" alt="qvevri">
-                <img src="https://via.placeholder.com/300" alt="venaxi">
-                <img src="https://via.placeholder.com/300" alt="wine">
-                <img src="https://via.placeholder.com/300" alt="wine">
-                <img src="https://via.placeholder.com/300" alt="wine">
-              </div>
-              <button class="carousel__button next" id="next"><</button>
-            </div>
+        <h1>Our Gallery</h1>
 
-            <div class="right">
-              <img src="" alt="">
-              <p class="page1-p">Guided walking Tour through the Vineyards in the Valley of Gods and the Menegolli Wineries. Book your tour in advance (minimum 7 adults) which will take place in Valpantena – VERONA.</p>
-            </div>
+        <div class="gallery" id="carouselenco">
+            <img class="gallery-image" src="./img/wine.JPG" alt="">
+
+            <img class="gallery-image" src="./img/qvevri.jpg" alt="">
+            <img class="gallery-image" src="./img/venaxi.jpg" alt="">
+            <img class="gallery-image" src="./img/wine4.jpg" alt="">
+            <img class="gallery-image" src="./img/logo.png" alt="">
+
+        </div>
+      </div>
+
+    </section> -->
+    <section id="portfolio">
+      <div class="portfolio-header">
+          <h1>PORTFOLIO</h1>
+ 
+      </div>
+      <div class="porfolio-main">
+          <div class="portfolio-box">
+              <div class="box-upper">
+              <div class="wre">
+                  <img src="img/eye.svg" alt="">
+              </div>
+              <div class="wre">
+                  <img src="img/icon-cepi.svg" alt="">
+              </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
+          </div>
+          <div class="portfolio-box">
+              <div class="box-upper">
+                  <div class="wre">
+                      <img src="img/eye.svg" alt="">
+                  </div>
+                  <div class="wre">
+                      <img src="img/icon-cepi.svg" alt="">
+                  </div>
+              </div>
+              <div class="box-lower">
+                  <h5>A WORK OF PHOTOGRAPHY</h5>
+                  <p>Lorem ipsum dolor sit amet</p>
+              </div>
           </div>
 
-    </section>
+          
+      </div>
+  </section>
     <section id="section2">
       <div class="background1">
-        <div class="container3">
-          <img class="wine1" src="img/bottle3.jpg" alt="wines">
-          <img class="wine2" src="img/bottle32.jpg" alt="wines">
-        </div>
+
       </div>
     </section>
 
@@ -97,7 +188,7 @@
       <div class="container2">
         <div class="blog">
           <div class="block">
-            <i class="far fa-bell"></i>
+            <i class="far fa-bell" style="font-size: 100px;"></i>
             <p class="div-text1">LATEST Articles</p>
             <p class="div-text2">Best Wine Makers in Georgia 2021</p>
             <p class="div-text3">Solutions for Smart Home & Businesses</p>
@@ -132,7 +223,7 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47475.97241850706!2d45.837696!3d41.952002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4045db6446bf4a71%3A0x4e98ff012a347404!2sShilda%20Winery%20and%20Restaurant!5e0!3m2!1ska!2sge!4v1634021242415!5m2!1ska!2sge"
-            width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="form">
           <form action="#">
@@ -154,49 +245,28 @@
         </div>
       </div>
     </section>
-</body>
+
+  
+
 
 <footer>
-  <div class="footer">
-    <div class="footer-main">
-      <div class="footer1">
-
-        <p class="footer-title">Kai Winery</p>
-        <p class="footer-text">Our winery is an image of quality and profesionalism combined with hard work and
-          precision. You can expect only the best services from our staff.</p>
-
-      </div>
-      <div class="footer2">
-        <p class="footer-text">Useful links</p>
-        <a class="blue" href="#">Blog</a>
-        <a class="blue" href="#">Room</a>
-        <a class="blue" href="#">Gift Card</a>
-        <a class="blue" href="#">Testimonials</a>
-      </div>
-      <div class="footer3">
-        <p class="footer-text">Privacy</p>
-        <a class="blue" href="#">Career</a>
-        <a class="blue" href="#">About us</a>
-        <a class="blue" href="#">Contact us</a>
-        <a class="blue" href="#">Services</a>
-      </div>
-      <div class="footer4">
-        <p class="footer-text">Contact Info</p>
-        <img class="mail" src="img/mail.svg" alt="mail">
-        <p class="footer-text">example@yahoo.com</p>
-        <img src="img/phone.svg" alt="phone">
-        <p class="footer-text">+0 320 422 4254</p>
-        <img src="img/pin.svg" alt="pin">
-        <p class="footer-text">Main Str Chicago Ilinois</p>
-        <img src="img/fb.png" alt="fb">
-        <img src="img/tw.png" alt="tw">
-        <img src="img/gg.png" alt="gg">
-      </div>
-      <div class="fot-1-div5">
-        <p class="footer-text">Copyright ©2021 All rights reserved | By G110</p>
-      </div>
-    </div>
+  <div class="footer-main">
+      <div class="footer-flex">
+      <img class="footer-image" src="./img/lionbg.png" alt="logo" width="50px">
+      <p>© Copyright 2014 - <span>Kai Winery</span>  - Site was designed <span>Giorgi Asatiani.</span> </p>
   </div>
+      <div class="end">
+          <p>Help Center</p>
+          <p>Online Support</p>
+          <p>Forum</p>
+          <p>Articles</p>
+          <p></p>
+          <p>About Us</p>
+      </div>
+  </div>
+  
 </footer>
+<script src="./js/carousel.js"></script>
 
+</body>
 </html>
