--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
     </section> -->
     <section id="portfolio">
       <div class="portfolio-header">
-          <h1>PORTFOLIO</h1>
+          <h1>WINES</h1>
  
       </div>
       <div class="porfolio-main">
           <div class="portfolio-box">
               <div class="box-upper">
               <div class="wre">
-                  <img src="img/eye.svg" alt="">
+                  <img src="img/wine4.jpg" alt="">
               </div>
               <div class="wre">
                   <img src="img/icon-cepi.svg" alt="">
@@ -223,7 +223,7 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47475.97241850706!2d45.837696!3d41.952002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4045db6446bf4a71%3A0x4e98ff012a347404!2sShilda%20Winery%20and%20Restaurant!5e0!3m2!1ska!2sge!4v1634021242415!5m2!1ska!2sge"
-            width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            max-width="500" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="form">
           <form action="#">
@@ -253,14 +253,14 @@
   <div class="footer-main">
       <div class="footer-flex">
       <img class="footer-image" src="./img/lionbg.png" alt="logo" width="50px">
-      <p>© Copyright 2014 - <span>Kai Winery</span>  - Site was designed <span>Giorgi Asatiani.</span> </p>
+      <p>© Copyright 2021 - <span>Kai Winery</span>  - Site was designed by <span>Giorgi Asatiani.</span> </p>
   </div>
       <div class="end">
           <p>Help Center</p>
           <p>Online Support</p>
           <p>Forum</p>
           <p>Articles</p>
-          <p></p>
+          
           <p>About Us</p>
       </div>
   </div>
