--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
  
       </div>
       <div class="porfolio-main">
-          <div class="portfolio-box">
+          <div class="portfolio-box" style="background:url(img/venaxi.jpg)">
               <div class="box-upper">
               <div class="wre">
-                  <img src="img/wine4.jpg" alt="">
+                  <img src="img/eye.svg" alt="">
               </div>
               <div class="wre">
                   <img src="img/icon-cepi.svg" alt="">
