--- a/index.html
+++ b/index.html
@@ -24,24 +24,26 @@
     <div class="header-div">
       <nav class="nav">
         <ul class="ul">
-          <a onclick="scrol(1)">
+          <a class="nav-text" onclick="scrol(1)">
             <li class="nav-list">Winery</li>
           </a>
-          <a onclick="scrol(3)">
+          <a class="nav-text" onclick="scrol(3)">
             <li class="nav-list">Wines</li>
           </a>
           <a onclick="scrol(0)">
             <li class="nav-list"><img class="logo" src="img/lionbg.png" alt="logo"></li>
           </a>
-          <a onclick="scrol(2)">
+          <a class="nav-text" onclick="scrol(2)">
             <li class="nav-list">About Us</li>
           </a>
-          <a onclick="scrol(4)">
+          <a class="nav-text" onclick="scrol(4)">
             <li class="nav-list">Contact</li>
           </a>
         </ul>
         <div class="bars">
-          <i class="fas fa-bars"></i>
+          <i></i>
+          <img onclick="scrol(0)" class="logo" src="img/lionbg.png" alt="logo">
+          <i class="fas fa-bars burger"></i>
         </div>
       </nav>
     </div>
