--- a/index.html
+++ b/index.html
@@ -186,10 +186,15 @@
 
     <section id="section3">
       <div class="container2">
-        <div class="blog">
+        <div class="kaitext">
+          <p class="kaitext1">KAI Winery - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
+            <p class="kaitext1">The fundamental philosophy of the brand is to establish strong positioning on the market by merging traditional Georgian methodology with a young innovative vision in wine production.</p>
+            <p class="kaitext1">The oldest vineyard in property of our family winery is almost 102 years old</p>
+        </div>
+        <!-- <div class="blog">
           <div class="block">
             <i class="far fa-bell" style="font-size: 100px;"></i>
-            <p class="div-text1">LATEST Articles</p>
+            <p class="div-text1">KAI Winery - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
             <p class="div-text2">Best Wine Makers in Georgia 2021</p>
             <p class="div-text3">Solutions for Smart Home & Businesses</p>
             <div class="read">
@@ -214,7 +219,7 @@
               fruit, its fermentation into alcohol, and the bottling of the finished</p>
             <div class="read">
               <p>Read More</p>
-            </div>
+            </div> -->
           </div>
     </section>
 
