--- a/index.html
+++ b/index.html
@@ -40,13 +40,27 @@
             <li class="nav-list">Contact</li>
           </a>
         </ul>
+        <div>
         <div class="bars">
           <i></i>
           <img onclick="scrol(0)" class="logo" src="img/lionbg.png" alt="logo">
-          <i class="fas fa-bars burger"></i>
+          <div id="giji" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
+        </div>
+        </div>
+        <div class="phone-menu" id="menu">
+        <ul>
+          <li>WINERY</li>
+          <li>WINES</li>
+          <li>ABOUT US</li>
+          <li>CONTACT</li>
+        </ul>
         </div>
       </nav>
-    </div>
+      </div>
 
     <section id="section0">
       <div class="section0-blur"></div>
