--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="nav-list">Winery</li>
           </a>
           <a class="nav-text" onclick="scrol(3)">
-            <li class="nav-list">Wines</li>
+            <li class="nav-list">Products</li>
           </a>
           <a onclick="scrol(0)">
             <li class="nav-list"><img class="logo" src="img/lionbg.png" alt="logo"></li>
@@ -182,16 +182,33 @@
   </section>
     <section id="section2">
       <div class="background1">
+          <div class="kaiwinery-lh1">
+            <p class="kaiwine-text"><span class="kaiwineryhead">Kisi</span>  - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
+              <p class="kaiwine-text">Wine Description :
+                Pure gold in color, clear, with hints of yellow and amber.
+                Powerful aroma, Touch of pineapple on the nose, ripe melony fruit, slightly exotic, stylish, and very expressive. honeyed-peach and apricot, an impression of moderate sweetness.
+                Dry, medium body, smooth acidity, a fair combination of alcohol tannin, and sugar.
+                good balance, long, dry finish. Fine long flavor despite the liveliness, natural mild acidity present, a wine for food such as Fried chicken, beef, fish or meaty salads.</p>
+            <p class="kaiwine-text">The fundamental philosophy of the brand is to establish strong positioning on the market by merging traditional Georgian methodology with a young innovative vision in wine production.</p>
+              <p class="kaiwine-text">The oldest vineyard in property of our family winery is almost 102 years old.</p>
+          </div>
+          <div class="kaiwine-r">
+            <img class="kaikisi" src="img/kisi.jpg" alt="kisi">
+            <img class="kaikisi" src="img/kisi-back.jpg" alt="kisi">
+          </div>
 
       </div>
     </section>
 
     <section id="section3">
       <div class="container2">
-        <div class="kaitext">
-          <p class="kaitext1">KAI Winery - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
+        <div class="kaiwinery-lh">
+          <p class="kaitext1"><span class="kaiwineryhead">KAI Winery</span>  - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
             <p class="kaitext1">The fundamental philosophy of the brand is to establish strong positioning on the market by merging traditional Georgian methodology with a young innovative vision in wine production.</p>
-            <p class="kaitext1">The oldest vineyard in property of our family winery is almost 102 years old</p>
+            <p class="kaitext1">The oldest vineyard in property of our family winery is almost 102 years old.</p>
+        </div>
+        <div class="kaiwinery-rh">
+          <img class="kaiwineryph" src="img/kaiwineyard.png" alt="vineyard">
         </div>
         <!-- <div class="blog">
           <div class="block">
@@ -230,7 +247,10 @@
         <div class="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47475.97241850706!2d45.837696!3d41.952002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4045db6446bf4a71%3A0x4e98ff012a347404!2sShilda%20Winery%20and%20Restaurant!5e0!3m2!1ska!2sge!4v1634021242415!5m2!1ska!2sge"
-            max-width="500" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            max-width="400" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="liondiv">
+          <img class="lionlogo" src="img/lionbg.png" alt="logo">
         </div>
         <div class="form">
           <form action="#">
