--- a/index.html
+++ b/index.html
@@ -195,23 +195,16 @@
       </div>
   </section>
     <section id="section2">
-      <div class="background1">
-          <div class="kaiwinery-lh1">
-            <p class="kaiwine-text"><span class="kaiwineryhead">Kisi</span>  - has been actively present on the Georgian wine market for already four years and is maintaining the path chosen towards individualism and quality.</p>
-              <p class="kaiwine-text">Wine Description :
-                Pure gold in color, clear, with hints of yellow and amber.
-                Powerful aroma, Touch of pineapple on the nose, ripe melony fruit, slightly exotic, stylish, and very expressive. honeyed-peach and apricot, an impression of moderate sweetness.
-                Dry, medium body, smooth acidity, a fair combination of alcohol tannin, and sugar.
-                good balance, long, dry finish. Fine long flavor despite the liveliness, natural mild acidity present, a wine for food such as Fried chicken, beef, fish or meaty salads.</p>
-            <p class="kaiwine-text">The fundamental philosophy of the brand is to establish strong positioning on the market by merging traditional Georgian methodology with a young innovative vision in wine production.</p>
-              <p class="kaiwine-text">The oldest vineyard in property of our family winery is almost 102 years old.</p>
-          </div>
-          <div class="kaiwine-r">
-            <img class="kaikisi" src="img/kisi.jpg" alt="kisi">
-            <img class="kaikisi" src="img/kisi-back.jpg" alt="kisi">
-          </div>
-
+      <div class="section2-front">
+        <img class="section2-img-front" src="img/kisi.jpg" alt="">
       </div>
+      <div class="section2-back">
+        <img class="section2-img-back" src="img/kisi-back.jpg" alt="">
+      </div>
+
+      <button id="btn1"></button>
+      <button id="btn2"></button>
+
     </section>
 
     <section id="section3">
